Add language specific color variables for 'CS (C#)'

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -85,6 +85,14 @@
 @color-syntax-c-preprocessor: @dark-blue;
 
 /*
+ * ======
+ * = CS =
+ * ======
+ */
+@color-syntax-cs-comment-tag: @light-blue;
+@color-syntax-cs-preprocessor: @dark-blue;
+
+/*
  * =======
  * = CSS =
  * =======
