Prepare apm package release 0.9.1

--- a/index.less
+++ b/index.less
@@ -2,8 +2,8 @@
 #************************************************#
 #           Northem Dark Atom Syntax             #
 #------------------------------------------------#
-#           northem-dark-atom-syntax             #
-#                 version 0.9.0                  #
+#                  index.less                    #
+#                 version 0.9.1                  #
 #       http://arcticicestudio.com/Northem       #
 #                                                #
 #               Arctic Ice Studio                #
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-29 16:00 +0100 UTC      #
+#      Modified: 2015-09-13 11:18 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -63,7 +63,7 @@ Syntax Highlighting actually includes:
 
 [Version]
 LATEST
-  - stable:     0.9.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
+  - stable:     0.9.1 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
   - snapshot:   /
 
 status: ìndev
