Import 'git.less' into the index and update documentation comments

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-09-24 21:01 +0100 UTC      #
+#      Modified: 2015-09-24 21:02 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -42,6 +42,7 @@ Syntax Highlighting actually includes:
   - CSS             (https://atom.io/packages/language-css)
   - D               (https://atom.io/packages/language-d)
   - Generic Config  (https://atom.io/packages/language-generic-config)
+  - git             (https://atom.io/packages/language-git)
   - GLSL            (https://atom.io/packages/language-glsl)
   - diff            (https://atom.io/packages/git-diff)
   - HAML            (https://atom.io/packages/language-haml)
@@ -132,6 +133,7 @@ LESS:                 http://lesscss.org
 @import "./styles/languages/CSS.less";
 @import "./styles/languages/D.less";
 @import "./styles/languages/GenericConfig.less";
+@import "./styles/languages/git.less";
 @import "./styles/languages/GLSL.less";
 @import "./styles/languages/HAML.less";
 @import "./styles/languages/Haskell.less";
