--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-09-24 21:02 +0100 UTC      #
+#      Modified: 2015-09-24 21:03 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -56,6 +56,7 @@ Syntax Highlighting actually includes:
   - Markdown        (https://atom.io/packages/language-gfm)
   - Mustache        (https://atom.io/packages/language-mustache)
   - PHP             (https://atom.io/packages/language-php)
+  - PropertyList    (https://atom.io/packages/language-property-list)
   - Python          (https://atom.io/packages/language-python)
   - R               (https://atom.io/packages/language-r)
   - Ruby            (https://atom.io/packages/language-ruby)
@@ -147,6 +148,7 @@ LESS:                 http://lesscss.org
 @import "./styles/languages/Markdown.less";
 @import "./styles/languages/Mustache.less";
 @import "./styles/languages/PHP.less";
+@import "./styles/languages/PropertyList.less";
 @import "./styles/languages/Python.less";
 @import "./styles/languages/R.less";
 @import "./styles/languages/Ruby.less";
