Fix undefinded color variable

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -10,7 +10,7 @@
 #   development@arcticicestudio.com    #
 #                                      #
 # Created : 2015-03-16 18:21 +0100 UTC #
-# Modified: 2015-09-24 16:24 +0100 UTC #
+# Modified: 2015-09-24 21:54 +0100 UTC #
 #**************************************#
 
 [Description]
@@ -88,7 +88,7 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
 /*+----------------------------------------------------------------------------+
   + Gutter                                                               [3.0] +
   +----------------------------------------------------------------------------+*/
-@color-gutter-background:           @darkest-gray;
+@color-gutter-background:           @darkest-coal;
 @color-gutter-background-selected:  @coal;
 @color-gutter-text:                 @dirty-white;
 @color-gutter-text-selected:        @light-blue;
