--- a/styles/packagesupport.less
+++ b/styles/packagesupport.less
@@ -1,43 +1,128 @@
 /*
-********************************************************
-* package:    bracket-matcher                          *
-* author:     atom                                     *
-* home:       https://atom.io/packages/bracket-matcher *
-* version:    0.71.0                                   *
-********************************************************
-*/
-.bracket-matcher.region {
-  border-bottom: 2px solid @color-marker-result-border;
-  border-radius: 1px;
-  /*
-   * FIXME: Unreadable on similar font colors
-   *
-  opacity: 0.45;
-  background-color: @color-marker-result-border;
-   *
-   */
-}
+#********************************************#
+# Northem Dark Atom Syntax - Package Support #
+#--------------------------------------------#
+#            packagesupport.less             #
+#     http://arcticicestudio.com/Northem     #
+#                                            #
+#             Arctic Ice Studio              #
+#             Copyright (c) 2015             #
+#      development@arcticicestudio.com       #
+#                                            #
+#    Created : 2015-03-17 14:36 +0100 UTC    #
+#    Modified: 2015-09-27 20:26 +0100 UTC    #
+#********************************************#
 
-/*
-***********************************************************
-* package:    hightlight-selected                         *
-* author:     richrace                                    *
-* home:       https://atom.io/packages/highlight-selected *
-* version:    0.9.1                                       *
-***********************************************************
+[Description]
+This file defines package specific styles based on the matching custom classes.
+
+[Index]
+  (1.0) bracket-matcher
+  (2.0) color-picker
+  (3.0) hightlight-selected
+  (4) markdown-preview
+    (4.0) editor
+    (4.1) blockquote
+    (4.2) code
+  (5.0) minimap-highlight-selected
+
+[Packages]
+Actually supporting:
+  * bracket-matcher @ ^0.76.0            (https://atom.io/packages/bracket-matcher)
+  * color-picker @ ^2.0.12               (https://atom.io/packages/color-picker)
+  * hightlight-selected @ ^0.10.1        (https://atom.io/packages/highlight-selected)
+  * markdown-preview @ ^0.150.0          (https://atom.io/packages/markdown-preview)
+  * minimap-highlight-selected @ ^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
+
+[License]
+Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
+
+Northem code is licensed under "GPL3" (http://www.gnu.org/licenses/gpl.txt).
+Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativecommons.org/licenses/by-nc-sa/4.0).
 */
+/*+----------------------------------------------------------------------------+
+  + bracket-matcher                                                      [1.0] +
+  +----------------------------------------------------------------------------+*/
+.bracket-matcher.region {
+  border-bottom: @size-packagesupport-bracket-matcher-border-bottom solid @color-marker-result-border;
+  border-radius: @size-packagesupport-bracket-matcher-border-radius;
+}
+/*+----------------------------------------------------------------------[1.0]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + color-picker                                                         [2.0] +
+  +----------------------------------------------------------------------------+*/
+.ColorPicker {
+  .ColorPicker-body {
+    background-color: @color-packagesupport-color-picker-background;
+  }
+  .ColorPicker-color-text {
+    font-size: @size-packagesupport-color-picker-color-font;
+    color: @color-editor-text;
+  }
+  .ColorPicker-format {
+    background-color: @color-packagesupport-color-picker-background;
+    .ColorPicker-format-button {
+      background-color: @color-packagesupport-color-picker-background-button;
+      color: @color-editor-text;
+      text-shadow: none;
+      font-size: @size-base-text;
+
+      &.is--active {
+        background-color: lighten(@color-packagesupport-color-picker-background-button, 5%);
+        font-weight: bold;
+      }
+    }
+  }
+}
+/*+----------------------------------------------------------------------[2.0]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + hightlight-selected                                                  [3.0] +
+  +----------------------------------------------------------------------------+*/
 .highlight-selected .region {
   border-color: @color-marker-result-border !important;
 }
+/*+----------------------------------------------------------------------[3.0]-+*/
 
-/*
-*******************************************************************
-* package:    minimap-highlight-selected                          *
-* author:     atom-minimap                                        *
-* home:       https://atom.io/packages/minimap-highlight-selected *
-* version:    4.2.0                                               *
-*******************************************************************
-*/
+/*+----------------------------------------------------------------------------+
+  + markdown-preview                                                       [4] +
+  +----------------------------------------------------------------------------+*/
+.markdown-preview {
+/*+----------------------------------------------------------------------------+
+  + markdown-preview - editor                                            [4.0] +
+  +----------------------------------------------------------------------------+*/
+  .editor {
+    background-color: @color-editor-background;
+  }
+/*+----------------------------------------------------------------------[4.0]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + markdown-preview - blockquote                                        [4.1] +
+  +----------------------------------------------------------------------------+*/
+  blockquote {
+    border-left-color: @color-packagesupport-markdown-preview-blockquote-border;
+  }
+/*+----------------------------------------------------------------------[4.1]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + markdown-preview - code                                              [4.2] +
+  +----------------------------------------------------------------------------+*/
+  code {
+    color: @color-packagesupport-markdown-preview-code;
+
+    &:hover {
+      background-color: @color-packagesupport-markdown-preview-code-hover;
+    }
+  }
+/*+----------------------------------------------------------------------[4.2]-+*/
+}
+/*+------------------------------------------------------------------------[4]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + minimap-highlight-selected                                           [5.0] +
+  +----------------------------------------------------------------------------+*/
 .minimap .highlight-selected {
   background: @color-marker-result-border;
 }
+/*+----------------------------------------------------------------------[5.0]-+*/
