Add section 'Package Support' and add color variables for 'markdown-preview' and 'color-picker'

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -10,7 +10,7 @@
 #   development@arcticicestudio.com    #
 #                                      #
 # Created : 2015-03-16 18:21 +0100 UTC #
-# Modified: 2015-09-24 21:54 +0100 UTC #
+# Modified: 2015-09-27 20:28 +0100 UTC #
 #**************************************#
 
 [Description]
@@ -40,6 +40,9 @@ This file defines all syntax, UI & language specific color variables.
     (6.14) PropertyList
     (6.15) Ruby
     (6.16) XML
+    (7) Package Support
+      (7.0) Markdown Preview
+      (7.1) Color Picker
 
 [License]
 Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
@@ -235,3 +238,18 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
 @color-syntax-xml-cdata:      @color-syntax-comment;
 @color-syntax-xml-tag:        @blue;
 /*+---------------------------------------------------------------------[6.16]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + Package Support - Markdown Preview                                   [7.0] +
+  +----------------------------------------------------------------------------+*/
+@color-packagesupport-markdown-preview-blockquote-border: @dirty-white;
+@color-packagesupport-markdown-preview-code:              @light-blue;
+@color-packagesupport-markdown-preview-code-hover:        @light-coal;
+/*+----------------------------------------------------------------------[7.0]-+*/
+
+/*+----------------------------------------------------------------------------+
+  + Package Support - Color Picker                                       [7.1] +
+  +----------------------------------------------------------------------------+*/
+@color-packagesupport-color-picker-background:        @darkest-coal;
+@color-packagesupport-color-picker-background-button: @dark-blue;
+/*+----------------------------------------------------------------------[7.1]-+*/
