Fix description in documentation comment header

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -14,7 +14,7 @@
 #**************************************#
 
 [Description]
-This file defines all syntax, UI & language specific color variables.
+This file defines all syntax, editor & language specific color variables.
 
 [Index]
   (1.0) Syntax
