Fix description and indentition in documentation comment header

--- a/index.less
+++ b/index.less
@@ -1,21 +1,21 @@
 /*
-#************************************************#
-#           Northem Dark Atom Syntax             #
-#------------------------------------------------#
-#                  index.less                    #
-#                 version 0.10.1                 #
-#       http://arcticicestudio.com/Northem       #
-#                                                #
-#               Arctic Ice Studio                #
-#              Copyright (c) 2015                #
-#         development@arcticicestudio.com        #
-#                                                #
-#      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-09-24 21:03 +0100 UTC      #
-#************************************************#
+#**************************************#
+#     Northem Dark Atom Syntax         #
+#--------------------------------------#
+#             index.less               #
+#           version 0.10.0             #
+#  http://arcticicestudio.com/Northem  #
+#                                      #
+#          Arctic Ice Studio           #
+#         Copyright (c) 2015           #
+#   development@arcticicestudio.com    #
+#                                      #
+# Created : 2015-03-15 20:17 +0100 UTC #
+# Modified: 2015-09-27 20:30 +0100 UTC #
+#**************************************#
 
 [Description]
-Northem is a north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.
+A north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.
 This is a darker and more blue-tinged variation.
 
 [Variations]
