Add section 'Package Support'

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #   development@arcticicestudio.com    #
 #                                      #
 # Created : 2015-03-15 20:17 +0100 UTC #
-# Modified: 2015-09-27 20:30 +0100 UTC #
+# Modified: 2015-09-27 20:31 +0100 UTC #
 #**************************************#
 
 [Description]
@@ -63,6 +63,14 @@ Syntax Highlighting actually includes:
   - SASS            (https://atom.io/packages/language-sass)
   - XML             (https://atom.io/packages/language-xml)
   - YAML            (https://atom.io/packages/language-yaml)
+
+[Packages]
+Actually supporting:
+  * bracket-matcher @ ^0.76.0            (https://atom.io/packages/bracket-matcher)
+  * color-picker @ ^2.0.12               (https://atom.io/packages/color-picker)
+  * hightlight-selected @ ^0.10.1        (https://atom.io/packages/highlight-selected)
+  * markdown-preview @ ^0.150.0          (https://atom.io/packages/markdown-preview)
+  * minimap-highlight-selected @ ^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
 
 [Version]
 LATEST
