Import 'sizes.less' into the index

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #   development@arcticicestudio.com    #
 #                                      #
 # Created : 2015-03-15 20:17 +0100 UTC #
-# Modified: 2015-09-27 20:31 +0100 UTC #
+# Modified: 2015-09-27 20:33 +0100 UTC #
 #**************************************#
 
 [Description]
@@ -121,6 +121,7 @@ LESS:                 http://lesscss.org
  */
 @import (reference) "styles/northem-dark.less";
 @import (reference) "styles/colors.less";
+@import (reference) "styles/sizes.less";
 @import "./styles/editor.less";
 
 /*
