Prepare apm package release 0.11.2

--- a/index.less
+++ b/index.less
@@ -3,7 +3,7 @@
 #     Northem Dark Atom Syntax         #
 #--------------------------------------#
 #             index.less               #
-#           version 0.11.1             #
+#           version 0.11.2             #
 #  http://arcticicestudio.com/Northem  #
 #                                      #
 #          Arctic Ice Studio           #
@@ -73,9 +73,8 @@ Actually supporting:
   * minimap-highlight-selected @ ^4.3.1  (https://atom.io/packages/minimap-highlight-selected)
 
 [Version]
-LATEST
-  - stable:     0.11.1 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
-  - snapshot:   /
+stable:     0.11.2 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
+snapshot:   /
 
 status: ìndev
 
