--- a/styles/packagesupport.less
+++ b/styles/packagesupport.less
@@ -10,7 +10,7 @@
 #      development@arcticicestudio.com       #
 #                                            #
 #    Created : 2015-03-17 14:36 +0100 UTC    #
-#    Modified: 2015-10-01 19:31 +0100 UTC    #
+#    Modified: 2015-10-04 09:01 +0100 UTC    #
 #********************************************#
 
 [Description]
@@ -92,7 +92,7 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
 /*+----------------------------------------------------------------------------+
   + markdown-preview - editor                                            [4.0] +
   +----------------------------------------------------------------------------+*/
-  .atom-text-editor {
+  atom-text-editor {
     background-color: @color-editor-background;
   }
 /*+----------------------------------------------------------------------[4.0]-+*/
