Update to new comment header documentation box format

--- a/index.less
+++ b/index.less
@@ -1,18 +1,16 @@
 /*
-#**************************************#
-#     Northem Dark Atom Syntax         #
-#--------------------------------------#
-#             index.less               #
-#           version 0.11.2             #
-#  http://arcticicestudio.com/Northem  #
-#                                      #
-#          Arctic Ice Studio           #
-#         Copyright (c) 2015           #
-#   development@arcticicestudio.com    #
-#                                      #
-# Created : 2015-03-15 20:17 +0100 UTC #
-# Modified: 2015-09-27 20:33 +0100 UTC #
-#**************************************#
+++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax           +
+project   northem-dark-atom-syntax           +
+file      index.less                         +
+version   0.11.2                             +
+webiste   http://arcticicestudio.com/Northem +
+author    Arctic Ice Studio                  +
+email     development@arcticicestudio.com    +
+copyright Copyright (C) 2015                 +
+created   2015-03-15 20:17 UTC+0100          +
+modified  2015-12-12 20:44 UTC+0100          +
+++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 A north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.
